# mars

./: .gitignore  README.md  pyproject.toml
scripts/: database.sh
scripts/common/: database-env.sh.sample  utils.sh
src/app/: context.py  main.py  service.py
src/app/config/: application.yaml
src/module/archive/: processor.py
src/module/archive/table/: archive.py
src/module/database/: connection.py  db.py
src/module/database/connection/: utils.py
src/module/image/: controlller.py  processor.py  service.py
src/module/image/entity/: image.py
src/module/image/table/: image.py
src/module/server/: config.py  controlller.py  index.html  initial.py  server.py  service.py  utils.py
src/ui/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
src/ui/public/: index.html  stylesheet.css
src/ui/src/: main.tsx
src/ui/src/container/: UIArchiveConverter.tsx  UIImageConverter.tsx
src/ui/src/home/: UIHome.tsx  UIWelcome.tsx
src/ui/src/image/: UIImageConverter.tsx
src/ui/src/scss/: stylesheet.scss
src/ui/src/server/: RESTful.tsx
test/: test_server.py
