[tool.poetry]
name = "mars"
version = "0.1.0"
description = "Convert image file extension into one another"
authors = ["binhnguyen00 <jackjack2000.kahp@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
