[tool.poetry]
name = "mars"
version = "0.1.0"
description = "Convert image file extensions from one type to another"
authors = ["binhnguyen00 <jackjack2000.kahp@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
